force-app/main/default/objects/Loan__c/fields/Overdue_Installments__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Installments__c</fullName>
    <label>Overdue Installments</label>
    <summaryFilterItems>
        <field>Installment__c.Status__c</field>
        <operation>equals</operation>
        <value>Overdue</value>
    </summaryFilterItems>
    <summaryForeignKey>Installment__c.Loan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>