force-app/main/default/objects/Loan__c/fields/Repayment_Progress__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Progress__c</fullName>
    <formula>Total_Paid__c / Total_Payable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Repayment Progress</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>