force-app/main/default/objects/Loan__c/fields/Requires_Second_Approval__c.field-meta.xml
<CustomField>
    <fullName>Requires_Second_Approval__c</fullName>
    <formula>AND(
  NOT(ISBLANK($CustomMetadata.Loan_Setting_mdt__mdt.Default_Settings.Approval_Threshold__c)),
  Principal_Amount__c &gt; $CustomMetadata.Loan_Setting_mdt__mdt.Default_Settings.Approval_Threshold__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requires Second Approval</label>
    <type>Checkbox</type>
</CustomField>