force-app/main/default/objects/Loan__c/fields/Total_Interest__c.field-meta.xml
<CustomField>
    <fullName>Total_Interest__c</fullName>
    <label>Total Interest</label>
    <summarizedField>Installment__c.Interest_Component__c</summarizedField>
    <summaryForeignKey>Installment__c.Loan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>