force-app/main/default/objects/Loan__c/fields/Total_Payable__c.field-meta.xml
<CustomField>
    <fullName>Total_Payable__c</fullName>
    <label>Total Payable</label>
    <summarizedField>Installment__c.EMI_Amount__c</summarizedField>
    <summaryForeignKey>Installment__c.Loan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>