force-app/main/default/objects/Loan__c/validationRules/Interest_Rate_Between_0_And_100.validationRule-meta.xml
<ValidationRule>
    <fullName>Interest_Rate_Between_0_And_100</fullName>
    <active>true</active>
    <errorConditionFormula>OR(Interest_Rate__c &lt; 0, Interest_Rate__c &gt; 1)</errorConditionFormula>
    <errorDisplayField>Interest_Rate__c</errorDisplayField>
    <errorMessage>Interest rate must be between 0 and 100</errorMessage>
</ValidationRule>