force-app/main/default/objects/Loan__c/validationRules/Principal_Must_Be_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Principal_Must_Be_Positive</fullName>
    <active>true</active>
    <errorConditionFormula>OR(ISBLANK(Principal_Amount__c), Principal_Amount__c &lt;= 0)</errorConditionFormula>
    <errorDisplayField>Principal_Amount__c</errorDisplayField>
    <errorMessage>Principal amount must be greater than 0</errorMessage>
</ValidationRule>