force-app/main/default/objects/Loan__c/validationRules/Tenure_Within_Max_Limit.validationRule-meta.xml
<ValidationRule>
    <fullName>Tenure_Within_Max_Limit</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
  Tenure_Months__c &lt;= 0,
  Tenure_Months__c &gt; $CustomMetadata.Loan_Setting_mdt__mdt.Default_Settings.Max_Tenure_Months__c
)</errorConditionFormula>
    <errorDisplayField>Tenure_Months__c</errorDisplayField>
    <errorMessage>Tenure must be greater than 0 and within the maximum allowed tenure</errorMessage>
</ValidationRule>